# multi-agent-writer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
multi_agent_writer/: __init__.py  __main__.py  config.py  llm.py  pipeline.py
multi_agent_writer/agents/: __init__.py  base.py  critic.py  editor.py  researcher.py  writer.py
tests/: test_pipeline.py
